[workspace]

resolver = "2" # Important! wgpu/Bevy needs this!

members = [
    "spinal",
    "bevy_spinal",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

