[package]
name = "spinal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Although the spinal crate is game engine agnostic, it still uses these helper crates from Bevy for its own
# computations, etc.
bevy_math = "0.8"
bevy_utils = "0.8"

thiserror = "1.0"
miette = "5.2"
strum = { version = "0.24", features = ["derive"] }

# JSON only
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Binary only
nom = "7.1"