[package]
name = "spinal"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A 2D animation engine for Spine."

[dependencies]
# Although the spinal crate is game engine agnostic, it still uses these helper crates from Bevy for its own
# computations, etc.
bevy_math = "0.8.0"
bevy_utils = "0.8.0"

tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
test-log = { version = "0.2.11", default-features = false, features = ["trace"] }
thiserror = "1.0.32"
miette = "5.2.0"
strum = { version = "0.24.1", features = ["derive"] }

# JSON only
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"

# Binary only
nom = "7.1.1"